--- a/references.bib
+++ b/references.bib
@@ -162,3 +162,93 @@
 	pages={1818--1827},
 	year={2016}
 }
+
+
+@inproceedings{ravi2011deciphering,
+	title={Deciphering foreign language},
+	author={Ravi, Sujith and Knight, Kevin},
+	booktitle={Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies-Volume 1},
+	pages={12--21},
+	year={2011},
+	organization={Association for Computational Linguistics}
+}
+
+@inproceedings{nuhn2012deciphering,
+	title={Deciphering foreign language by combining language models and context vectors},
+	author={Nuhn, Malte and Mauser, Arne and Ney, Hermann},
+	booktitle={Proceedings of the 50th Annual Meeting of the Association for Computational Linguistics: Long Papers-Volume 1},
+	pages={156--164},
+	year={2012},
+	organization={Association for Computational Linguistics}
+}
+
+@inproceedings{nuhn2014decipherment,
+	title={Em decipherment for large vocabularies},
+	author={Nuhn, Malte and Ney, Hermann},
+	booktitle={Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)},
+	volume={2},
+	pages={759--764},
+	year={2014}
+}
+
+@inproceedings{kim2017unsupervised,
+	title={Unsupervised Training for Large Vocabulary Translation Using Sparse Lexicon and Word Classes},
+	author={Kim, Yunsu and Schamper, Julian and Ney, Hermann},
+	booktitle={Proceedings of the 15th Conference of the European Chapter of the Association for Computational Linguistics: Volume 2, Short Papers},
+	volume={2},
+	pages={650--656},
+	year={2017}
+}
+
+
+@article{gehring2017convolutional,
+	title={Convolutional sequence to sequence learning},
+	author={Gehring, Jonas and Auli, Michael and Grangier, David and Yarats, Denis and Dauphin, Yann N},
+	journal={arXiv preprint arXiv:1705.03122},
+	year={2017}
+}
+
+@article{chen2017teacher,
+	title={A teacher-student framework for zero-resource neural machine translation},
+	author={Chen, Yun and Liu, Yang and Cheng, Yong and Li, Victor OK},
+	journal={arXiv preprint arXiv:1705.00753},
+	year={2017}
+}
+
+@inproceedings{cohn2007machine,
+	title={Machine translation by triangulation: Making effective use of multi-parallel corpora},
+	author={Cohn, Trevor and Lapata, Mirella},
+	booktitle={Proceedings of the 45th Annual Meeting of the Association of Computational Linguistics},
+	pages={728--735},
+	year={2007}
+}
+
+@inproceedings{he2016dual,
+	title={Dual learning for machine translation},
+	author={He, Di and Xia, Yingce and Qin, Tao and Wang, Liwei and Yu, Nenghai and Liu, Tieyan and Ma, Wei-Ying},
+	booktitle={Advances in Neural Information Processing Systems},
+	pages={820--828},
+	year={2016}
+}
+
+
+@article{duong2016learning,
+	title={Learning crosslingual word embeddings without bilingual corpora},
+	author={Duong, Long and Kanayama, Hiroshi and Ma, Tengfei and Bird, Steven and Cohn, Trevor},
+	journal={arXiv preprint arXiv:1606.09403},
+	year={2016}
+}
+
+@article{vulic2016role,
+	title={On the role of seed lexicons in learning bilingual word embeddings},
+	author={Vulic, Ivan and Korhonen, Anna-Leena},
+	year={2016}
+}
+
+@inproceedings{vaswani2017attention,
+	title={Attention is all you need},
+	author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+	booktitle={Advances in Neural Information Processing Systems},
+	pages={5998--6008},
+	year={2017}
+}
